# laminocupy-cli

./: .gitignore  CMakeLists.txt  README.rst  setup.py
docs/: conf.py  index.rst
docs/source/: api.rst  credits.rst  install.rst  usage.rst
docs/source/api/: laminocupy_cli.rec_steps.rst  laminocupy_cli.remove_stripe.rst  laminocupy_cli.retrieve_phase.rst
docs/source/bibtex/: cite.bib  ref.bib
src/cuda/: CMakeLists.txt  cfunc_filter.cu
src/include/: cfunc_filter.cuh  kernels_filter.cuh
src/laminocupy_cli/: __init__.py  backprojection.py  config.py  logging.py  rec_steps.py
src/laminocupy_cli/fbp_filter/: __init__.py  fbp_filter.py
